--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "@discordjs/builders": "^1.4.0",
     "@discordjs/rest": "^1.5.0",
     "discord-api-types": "^0.37.28",
-    "discord.js": "^13.12.0"
+    "discord.js": "^13.12.0",
+    "gd.js": "^0.2.13",
+    "isomorphic-fetch": "^3.0.0",
+    "node-fetch": "^3.3.0"
   }
 }
