Updated some things

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "requests-bot", 
+  "version": "1.0.0",
   "dependencies": {
     "@discordjs/builders": "^1.4.0",
     "@discordjs/rest": "^1.5.0",
